feat: sync to v1.6.3