@@ -1,6 +1,8 @@
 ::BATCH file for windows
-
+@echo off
 set BATDIR=%~dp0
-set LIBDIR=%BATDIR%..\cli-app\build\libs
+set CLIDIR=%BATDIR%..\cli-app\build\libs\*
+set LIBDIR=%BATDIR%..\build\libs\*
+@echo on
 
-java -Djava.ext.dirs=%LIBDIR% org.openmuc.j60870.app.SampleServer %*
+java -cp "%LIBDIR%;%CLIDIR%" org.openmuc.j60870.app.SampleServer %*
